--- a/src/App.css
+++ b/src/App.css
@@ -10,5 +10,22 @@
 }
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
-
+.up {
+  position: fixed;
+  bottom: 10px;
+  right: -10px;
+  background-color: #6fdcbf;
+  width: 30px;
+  height: 30px;
+  font-weight: bold;
+  font-size: 10px;
+  padding: 5px;
+  border-radius: 50%;
+  margin: auto;
+  cursor: pointer;
+}
+.up .show {
+  right: 10px;
+}
